cpp_test/compile_log.txt
In file included from /opt/miniconda/envs/r42/include/python3.12/frameobject.h:9,
                 from DDRTree.cpp:6:
/opt/miniconda/envs/r42/include/python3.12/pyframe.h:13:17: error: expected constructor, destructor, or type conversion before 'PyFrame_GetLineNumber'
   13 | PyAPI_FUNC(int) PyFrame_GetLineNumber(PyFrameObject *);
      |                 ^~~~~~~~~~~~~~~~~~~~~
/opt/miniconda/envs/r42/include/python3.12/pyframe.h:15:11: error: expected constructor, destructor, or type conversion before '(' token
   15 | PyAPI_FUNC(PyCodeObject *) PyFrame_GetCode(PyFrameObject *frame);
      |           ^
In file included from /opt/miniconda/envs/r42/include/python3.12/pyframe.h:19,
                 from /opt/miniconda/envs/r42/include/python3.12/frameobject.h:9,
                 from DDRTree.cpp:6:
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:5:11: error: expected constructor, destructor, or type conversion before '(' token
    5 | PyAPI_DATA(PyTypeObject) PyFrame_Type;
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:9:11: error: expected constructor, destructor, or type conversion before '(' token
    9 | PyAPI_FUNC(PyFrameObject *) PyFrame_GetBack(PyFrameObject *frame);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:10:11: error: expected constructor, destructor, or type conversion before '(' token
   10 | PyAPI_FUNC(PyObject *) PyFrame_GetLocals(PyFrameObject *frame);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:12:11: error: expected constructor, destructor, or type conversion before '(' token
   12 | PyAPI_FUNC(PyObject *) PyFrame_GetGlobals(PyFrameObject *frame);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:13:11: error: expected constructor, destructor, or type conversion before '(' token
   13 | PyAPI_FUNC(PyObject *) PyFrame_GetBuiltins(PyFrameObject *frame);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:15:11: error: expected constructor, destructor, or type conversion before '(' token
   15 | PyAPI_FUNC(PyObject *) PyFrame_GetGenerator(PyFrameObject *frame);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:16:17: error: expected constructor, destructor, or type conversion before 'PyFrame_GetLasti'
   16 | PyAPI_FUNC(int) PyFrame_GetLasti(PyFrameObject *frame);
      |                 ^~~~~~~~~~~~~~~~
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:17:11: error: expected constructor, destructor, or type conversion before '(' token
   17 | PyAPI_FUNC(PyObject*) PyFrame_GetVar(PyFrameObject *frame, PyObject *name);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:18:11: error: expected constructor, destructor, or type conversion before '(' token
   18 | PyAPI_FUNC(PyObject*) PyFrame_GetVarString(PyFrameObject *frame, const char *name);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:27:11: error: expected constructor, destructor, or type conversion before '(' token
   27 | PyAPI_FUNC(PyObject *) PyUnstable_InterpreterFrame_GetCode(struct _PyInterpreterFrame *frame);
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:31:17: error: expected constructor, destructor, or type conversion before 'PyUnstable_InterpreterFrame_GetLasti'
   31 | PyAPI_FUNC(int) PyUnstable_InterpreterFrame_GetLasti(struct _PyInterpreterFrame *frame);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda/envs/r42/include/python3.12/cpython/pyframe.h:35:17: error: expected constructor, destructor, or type conversion before 'PyUnstable_InterpreterFrame_GetLine'
   35 | PyAPI_FUNC(int) PyUnstable_InterpreterFrame_GetLine(struct _PyInterpreterFrame *frame);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/miniconda/envs/r42/include/python3.12/frameobject.h:13,
                 from DDRTree.cpp:6:
/opt/miniconda/envs/r42/include/python3.12/cpython/frameobject.h:9:11: error: expected constructor, destructor, or type conversion before '(' token
    9 | PyAPI_FUNC(PyFrameObject *) PyFrame_New(PyThreadState *, PyCodeObject *,
      |           ^
/opt/miniconda/envs/r42/include/python3.12/cpython/frameobject.h:16:18: error: expected constructor, destructor, or type conversion before 'PyFrame_LocalsToFast'
   16 | PyAPI_FUNC(void) PyFrame_LocalsToFast(PyFrameObject *, int);
      |                  ^~~~~~~~~~~~~~~~~~~~
/opt/miniconda/envs/r42/include/python3.12/cpython/frameobject.h:26:17: error: expected constructor, destructor, or type conversion before '_PyFrame_IsEntryFrame'
   26 | PyAPI_FUNC(int) _PyFrame_IsEntryFrame(PyFrameObject *frame);
      |                 ^~~~~~~~~~~~~~~~~~~~~
/opt/miniconda/envs/r42/include/python3.12/cpython/frameobject.h:28:17: error: expected constructor, destructor, or type conversion before 'PyFrame_FastToLocalsWithError'
   28 | PyAPI_FUNC(int) PyFrame_FastToLocalsWithError(PyFrameObject *f);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda/envs/r42/include/python3.12/cpython/frameobject.h:29:18: error: expected constructor, destructor, or type conversion before 'PyFrame_FastToLocals'
   29 | PyAPI_FUNC(void) PyFrame_FastToLocals(PyFrameObject *);
      |                  ^~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/usr/include/pybind11/cast.h: In function 'std::string pybind11::detail::error_string()':
/usr/include/pybind11/cast.h:440:26: error: 'PyFrame_GetLineNumber' was not declared in this scope
  440 |             int lineno = PyFrame_GetLineNumber(frame);
      |                          ^~~~~~~~~~~~~~~~~~~~~
/usr/include/pybind11/cast.h:442:36: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
  442 |                 "  " + handle(frame->f_code->co_filename).cast<std::string>() +
      |                                    ^~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
In file included from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/usr/include/pybind11/cast.h:442:75: error: expected primary-expression before '>' token
  442 |                 "  " + handle(frame->f_code->co_filename).cast<std::string>() +
      |                                                                           ^
/usr/include/pybind11/cast.h:442:77: error: expected primary-expression before ')' token
  442 |                 "  " + handle(frame->f_code->co_filename).cast<std::string>() +
      |                                                                             ^
/usr/include/pybind11/cast.h:444:29: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
  444 |                 handle(frame->f_code->co_name).cast<std::string>() + "\n";
      |                             ^~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
In file included from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/usr/include/pybind11/cast.h:444:64: error: expected primary-expression before '>' token
  444 |                 handle(frame->f_code->co_name).cast<std::string>() + "\n";
      |                                                                ^
/usr/include/pybind11/cast.h:444:66: error: expected primary-expression before ')' token
  444 |                 handle(frame->f_code->co_name).cast<std::string>() + "\n";
      |                                                                  ^
/usr/include/pybind11/cast.h:445:26: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
  445 |             frame = frame->f_back;
      |                          ^~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
In file included from DDRTree.cpp:8:
/usr/include/pybind11/pybind11.h: In function 'pybind11::function pybind11::get_type_overload(const void*, const pybind11::detail::type_info*, const char*)':
/usr/include/pybind11/pybind11.h:2046:49: error: 'PyThreadState' {aka 'struct _ts'} has no member named 'frame'; did you mean 'cframe'?
 2046 |     PyFrameObject *frame = PyThreadState_Get()->frame;
      |                                                 ^~~~~
      |                                                 cframe
/usr/include/pybind11/pybind11.h:2047:41: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
 2047 |     if (frame && (std::string) str(frame->f_code->co_name) == name &&
      |                                         ^~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
In file included from DDRTree.cpp:8:
/usr/include/pybind11/pybind11.h:2048:14: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
 2048 |         frame->f_code->co_argcount > 0) {
      |              ^~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
In file included from DDRTree.cpp:8:
/usr/include/pybind11/pybind11.h:2049:9: error: 'PyFrame_FastToLocals' was not declared in this scope
 2049 |         PyFrame_FastToLocals(frame);
      |         ^~~~~~~~~~~~~~~~~~~~
/usr/include/pybind11/pybind11.h:2051:18: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
 2051 |             frame->f_locals, PyTuple_GET_ITEM(frame->f_code->co_varnames, 0));
      |                  ^~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:35,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/usr/include/pybind11/pybind11.h:2051:30: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
 2051 |             frame->f_locals, PyTuple_GET_ITEM(frame->f_code->co_varnames, 0));
      |                              ^~~~~~~~~~~~~~~~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:38,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/usr/include/pybind11/pybind11.h:2051:30: error: invalid use of incomplete type 'PyFrameObject' {aka 'struct _frame'}
 2051 |             frame->f_locals, PyTuple_GET_ITEM(frame->f_code->co_varnames, 0));
      |                              ^~~~~~~~~~~~~~~~
In file included from /opt/miniconda/envs/r42/include/python3.12/Python.h:42,
                 from /usr/include/pybind11/detail/common.h:112,
                 from /usr/include/pybind11/pytypes.h:12,
                 from /usr/include/pybind11/cast.h:13,
                 from /usr/include/pybind11/attr.h:13,
                 from /usr/include/pybind11/pybind11.h:44,
                 from DDRTree.cpp:8:
/opt/miniconda/envs/r42/include/python3.12/pytypedefs.h:22:16: note: forward declaration of 'PyFrameObject' {aka 'struct _frame'}
   22 | typedef struct _frame PyFrameObject;
      |                ^~~~~~
